# wograld

./: .gitignore
javaclient/client/: ChangeLog  Makefile  Makefile.am  Makefile.in  NOTES  README  config.status  configure  configure.in  wograld-client.spec
javaclient/client/x11/: Makefile  Makefile.am  Makefile.in  clientbmap.h  libSDL_image-1.2.so.0  png.c  rcs-id.h  sound.c  wogclnt.man  x11.c  x11.h  x11proto.h  xutil.c
javaclient/client/x11/.deps/: png.Po  sound.Po  x11.Po  xutil.Po
javaclient/nbproject/: project.xml
javaeditor/trunk/: AUTHORS  CREDITS  FAQ  INSTALL  LICENSE  README  build-jenkins.sh  build.xml
maps/: HallOfSelection  asphodel111  asphodel112  asphodel121  asphodel122  asphodel211  asphodel212  asphodel221  asphodel222  asphodel311  elf_fort_1  elf_fort_11  elf_fort_2  elf_fort_21  elf_fort_22  elf_fort_222  elf_fort_23  elf_fort_3  elf_fort_31  elf_fort_32  elf_fort_3a  grassplains1  grassplains11  grassplains12  grassplains2  grassplains21  grassplains22  grassplains3  grassplains31  grassplains32  grassplains4  grassplains41  grassplains42  grassplains5  grassplains6  grassplains7  grassplains8  grassplains81  grassplains9  grassplains91  (+69 more)
maps/Info/: land
maps/brest/: amphis  brest.armour  elec.jes  info.2.zoon  info_first  jes.admini  jes.admini.1  ludo1  ludo2  nasty_house  pantheon  sport.jess  underground  underground2
maps/dragonisland/: hangar  house9
maps/euthville/: boulder_inferno  demon_quest  devil.church1  devil.church2  devil.church3  devil.church4  devil.church5  generalmall  hallofbones  magic.shop  map.fr.0  map.fr.1  map.fr.2  map.fr.3  wiz1  wiz2  wiz3  wiz4  wiz5  wiz6  wiz7
maps/inn_and_outpost/: redmarble_inn
maps/navar_city/: agmaq  city1church1  city1court  city1enter  city1houses  city1houses2  city1houses3  city1prison  collosium  iscar  mouse_house  (+10 more)
server/: AUTHORS  ChangeLog  DEVELOPERS  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  acinclude.m4  admin-install  config.status  configtest.out  configtest.xml  configtest.xsl  configure  configure.ac  libtool  quests.odt  quests.txt  run_win32.bat  usequests.txt
server/test/unit/wogedit/: Makefile  Makefile.am  Makefile.in  check_App.c  check_Attr.c  check_Bitmaps.c  check_CrEdit.c  check_CrFace.c  check_CrList.c  check_CrUtil.c  check_Edit.c  check_MapAttr.c  check_Str.c  check_png.c  check_stubs.c  check_wogedit.c  check_xutil.c
(+4494 files in other folders)
